%% DAK LOUK DATA – CACHE
classDiagram
class CacheValue
CacheValue : +single Cacheable?
CacheValue o-- Cacheable
CacheValue : +many List~Cacheable~?

class Single
Single : +data Cacheable
Single o-- Cacheable
Single : +single Cacheable?
Single o-- Cacheable
CacheValue <|-- Single

class Many
Many : +data List~Cacheable~
Many : +many List~Cacheable~?
CacheValue <|-- Many

class CacheInterface
<<abstract>> CacheInterface
CacheInterface : +set()* void
CacheInterface : +get()* CacheValue?
CacheInterface : +del()* void
CacheInterface : +delByPrefix()* void
CacheInterface : +delByPattern()* void
CacheInterface : +exists()* bool
CacheInterface : +flushAll()* void
CacheInterface : +getSize()* int

class Cache
Cache : -_instance$ Cache
Cache o-- Cache
Cache : -_cache Map~String, CacheValue~
Cache : +set() void
Cache : +get() CacheValue?
Cache : +del() void
Cache : +delByPrefix() void
Cache : +delByPattern() void
Cache : +exists() bool
Cache : +flushAll() void
Cache : +getSize() int
Cache : +expectMany() List<Cacheable>
Cache : +expectSingle() Cacheable
CacheInterface <|.. Cache

